--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
   <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 
-
+<body>
+  <h1><strong>Basic calculator</strong></h1>
+  <main>
+    <div class="container">
+      <div class="area">
+      </div>
+      <div class="touch">
+        <div class="touch2">
+          <button class="boutton">c</button>
+          <button class="boutton">(</button>
+          <button class="boutton">)</button>
+          <button class="boutton">/</button>
+        </div>
+        <div class="touch1">
+          <button class="boutton">7</button>
+          <button class="boutton">8</button>
+          <button class="boutton">9</button>
+          <button class="boutton">*</button>
+        </div>
+        <div class="touch1">
+          <button class="boutton">4</button>
+          <button class="boutton">5</button>
+          <button class="boutton">6</button>
+          <button class="boutton">-</button>
+        </div>
+        <div class="touch3">
+          <button class="boutton">1</button>
+          <button class="boutton">2</button>
+          <button class="boutton">3</button>
+          <button class="boutton">+</button>
+        </div>
+        <div class="touch1">
+          <button class="boutton">0</button>
+          <button class="boutton"> .</button>
+          <button class="boutton1">=</button>
+        </div>
+      </div>
+    </div>
+  </main>
+</body>
 
 </html>
